--- a/ShoppingApp/ShoppingApp/ShoppingApp.csproj
+++ b/ShoppingApp/ShoppingApp/ShoppingApp.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Uno.UI" Version="4.8.33" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms.GoogleMaps" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -73,6 +74,9 @@
     <EmbeddedResource Update="Producto.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Registro.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Ropa.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -85,5 +89,9 @@
     <EmbeddedResource Update="Surco.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Vista\" />
   </ItemGroup>
 </Project>
